--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to the Cat Collage 🐱</h1>
+    <h1>Paws, Click, Repeat!</h1>
   </header>
 
-  <main>
-    <section id="gallery">
-      <img src="images/cat1.jpg" alt="Cat 1">
-      <img src="images/cat2.jpg" alt="Cat 2">
-    </section>
+ <main>
+  <section id="cat-of-the-day">
+    <!-- Cat of the Day will appear here -->
+  </section>
+ </main>
+
 
     <button onclick="showRandomCat()">Show Random Cat</button>
     <div id="random-cat"></div>
