--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
  </main>
 
 
-    <button onclick="showRandomCat()">Show Random Cat</button>
+    <button onclick="showRandomCat()">Show A Random Cat</button>
     <div id="random-cat"></div>
   </main>
 
   <footer>
-    <p>Made by Firat 🐾</p>
+    <p>Made by Firat S.🐾</p>
   </footer>
 
   <script src="script.js"></script>
